fixed pubpublica.ini and wrapping pre elements

--- a/pubpublica/static/css/style.css
+++ b/pubpublica/static/css/style.css
@@ -12,6 +12,10 @@ a {
     text-decoration: none;
 }
 
+pre {
+    white-space: pre-wrap;
+}
+
 hr {
     width: 100%;
     border: 0;
